# DataGuardian

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: dashboard.py
app/dashboard_app/: __init__.py  app_main.py  data_io.py  scoring.py  sections.py  styles.py
data/: exemplo.csv
src/data/: cleaning.py  drift.py  quality.py
tests/: test_cleaning.py  test_drift.py  test_quality.py  test_scoring.py
